--- a/dj_test/visits/templates/index.html
+++ b/dj_test/visits/templates/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
   <h1>
-    <img src="{% static 'logo.png' %}"> Hello world
+    <img src="{% static 'logo.png' %}"> {{ get_page|title }}
   </h1>
   <p>I've been visited {{ nums_of_visits }} time{{ nums_of_visits|pluralize }}</p>
+  <ul>
+    {% for visit in visitors %}
+    <li>{{ visit.username }} at {{ visit.timestamp }}</li>
+    {% endfor %}
+  </ul>
 </body>
 </html>
